src/test/ui/inference/deref-suggestion.stderr
error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:8:9
   |
LL |     foo(s);
   |         ^- help: try using a conversion method: `.to_string()`
   |         |
   |         expected struct `String`, found `&String`

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:14:10
   |
LL |     foo3(u);
   |          ^ expected `u32`, found `&u32`
   |
help: consider dereferencing the borrow
   |
LL |     foo3(*u);
   |          +

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:30:9
   |
LL |     foo(&"aaa".to_owned());
   |         ^^^^^^^^^^^^^^^^^ expected struct `String`, found `&String`
   |
help: consider removing the borrow
   |
LL -     foo(&"aaa".to_owned());
LL +     foo("aaa".to_owned());
   | 

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:32:9
   |
LL |     foo(&mut "aaa".to_owned());
   |         ^^^^^^^^^^^^^^^^^^^^^ expected struct `String`, found `&mut String`
   |
help: consider removing the borrow
   |
LL -     foo(&mut "aaa".to_owned());
LL +     foo("aaa".to_owned());
   | 

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:2:20
   |
LL |     ($x:expr) => { &$x }
   |                    ^^^ expected `u32`, found `&{integer}`
...
LL |     foo3(borrow!(0));
   |          ---------- in this macro invocation
   |
   = note: this error originates in the macro `borrow` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:36:5
   |
LL |     assert_eq!(3i32, &3i32);
   |     ^^^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `&i32`
   |
   = note: this error originates in the macro `assert_eq` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:39:17
   |
LL |     let s = S { u };
   |                 ^
   |                 |
   |                 expected `&u32`, found integer
   |                 help: consider borrowing here: `u: &u`

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:41:20
   |
LL |     let s = S { u: u };
   |                    ^
   |                    |
   |                    expected `&u32`, found integer
   |                    help: consider borrowing here: `&u`

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:44:17
   |
LL |     let r = R { i };
   |                 ^ expected `u32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |     let r = R { i: *i };
   |                 ~~~~~

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:46:20
   |
LL |     let r = R { i: i };
   |                    ^ expected `u32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |     let r = R { i: *i };
   |                    +

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:55:9
   |
LL |         b
   |         ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |         *b
   |         +

error[E0308]: mismatched types
  --> $DIR/deref-suggestion.rs:63:9
   |
LL |         b
   |         ^ expected `i32`, found `&{integer}`
   |
help: consider dereferencing the borrow
   |
LL |         *b
   |         +

error[E0308]: `if` and `else` have incompatible types
  --> $DIR/deref-suggestion.rs:68:12
   |
LL |        let val = if true {
   |   _______________-
LL |  |         *a
   |  |         -- expected because of this
LL |  |     } else if true {
   |  |____________^
LL | ||
LL | ||         b
LL | ||     } else {
LL | ||         &0
LL | ||     };
   | ||     ^
   | ||_____|
   | |______`if` and `else` have incompatible types
   |        expected `i32`, found `&{integer}`

error: aborting due to 13 previous errors

For more information about this error, try `rustc --explain E0308`.
